add namespace to each template

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -14,6 +14,7 @@ metadata:
     release: "{{ .Release.Name }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
   name: {{ template "spring.fullname" . }}
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   rules:
   {{- range .Values.ingress.hosts }}
