--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,8 +1,16 @@
 apiVersion: v1
-appVersion: "0.0.2"
-description: Helm chart for deploying basic spring applications
+appVersion: 2.1.0.BUILD-SNAPSHOT
+description: Helm chart for deploying basic Spring applications
 name: spring
-version: 0.0.3
-home: https://github.com/paulczar/helm-chart-spring
+keywords:
+- spring
+- spring-cloud
+home: https://spring.io
+icon: https://spring.io/img/homepage/icon-spring-boot.svg
+sources:
+  - https://github.com/paulczar/helm-chart-spring
+  - https://github.com/spring-projects/spring-petclinic
+version: 0.0.4
 maintainers:
   - name: paulczar
+    email: username.taken@gmail.com
