--- a/templates/configmap-config.yaml
+++ b/templates/configmap-config.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "spring.fullname" . }}-app
+  name: {{ include "spring.fullname" . }}-config
   namespace: {{ .Release.Namespace | quote }}
   labels:
     app: {{ include "spring.name" . }}
@@ -11,5 +11,5 @@ metadata:
     heritage: {{ .Release.Service }}
 data:
   application.yml:
-    {{ toYaml .Values.Spring.config.content | indent 4  }}
+    {{ toYaml .Values.spring.config.content | indent 4  }}
 {{- end }}
